# protospy

./: .env.dev  .env.example  .gitignore  .hadolint.yaml  .linear.toml  .linear.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  docker-compose.yaml  justfile  protospy.code-workspace  renovate.json
.cargo/: config.toml
.claude/: .gitignore  settings.json
.claude/agents/: convention-review.md  design-system-conformance-review.md  frontend-engineer.md  qa-explorer.md  review-synthesis.md  setup-scout.md  visual-review.md
.claude/hooks/: pre-commit-gates.sh  pre-tool-use.sh  remind-convention-skills.sh  session-start.sh
.claude/rules/: ui-testing.md
.claude/skills/: protospy-screenshot
.codex/: hooks.json
.codex/agents/: convention-review.toml  design-system-conformance-review.toml  qa-explorer.toml  review-synthesis.toml  setup-scout.toml  visual-review.toml
.codex/hooks/: pre-tool-use.sh  remind-convention-skills.sh
.codex/rules/: protospy-host.rules
.devcontainer/: devcontainer.json
.github/workflows/: agent-scripts-ci.yml  cargo-audit.yml  conformance-ci.yml  coverage-ratchet.yml  demo-audit.yml  demo-ci.yml  docker-ci.yml  docker-publish.yml  docker.yml  flix-audit.yml  flix-ci.yml  pr-title.yml  protospy-ci.yml  protospy-conformance-ci.yml  ui-ci.yml  ui-snapshots.yml  ui-visual-regression.yml
.zed/: debug.json  tasks.json
bindings/: BodyChunk.ts  BodyContent.ts  BodyData.ts  Direction.ts  Event.ts  EventMessage.ts  ExchangeMeta.ts  Headers.ts  Info.ts  InitialBody.ts  Protocol.ts  ProxyHeaders.ts  Service.ts
conformance/: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  conftest.py  justfile  pyproject.toml  pyrightconfig.json
conformance/scripts/: direct_aiohttp_test.py
conformance/src/proxy_conformance/: bad_server.py  captured.py  good_server.py  grpc_server.py  h11_client.py  h2c_server.py  httpx_util.py  net.py  request_logging.py  targets.py  types.py  wire_server.py
conformance/src/proxy_conformance/proto/: echo.proto  echo_pb2.py  echo_pb2.pyi  echo_pb2_grpc.py
conformance/tests/: conftest.py  proxies.py  test_100_continue.py  test_assertions.py  test_bad_server.py  test_basic_proxy.py  test_body_framing.py  test_chunked_edge_cases.py  test_chunked_errors.py  test_connection_upgrades.py  test_forwarding_headers.py  test_good_server.py  test_grpc.py  test_h2_bridging.py  test_header_passthrough.py  test_hop_by_hop.py  test_request_forwarding.py  test_response_forwarding.py  test_streaming.py  test_timeouts.py  test_upstream_errors.py  test_via_header.py  test_wire_server.py
demo/: .dockerignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  config.py  justfile  loader.py  main.py  nginx.conf  pyproject.toml  serve.py
demo/content/: index.html
demo/data/: .gitignore
demo/src/elasticflix/: main.py
demo/src/elasticflix/templates/: base.html  item.html  search.html  stats.html
demo/templates/: index.html
demo/tests/: conftest.py  test_api.py  test_e2e.py
docker/: Dockerfile.local  Dockerfile.release
docs/: agent-dev.md  ci-debugging.md  conformance-test-catalog.md  conformance-tests.md  demo-dev.md  devcontainers.md  frontend-dod.md
docs/agents/: ci.md  dependencies.md  design.md  host-sandbox-internals.md  host-sandbox.md  implementation.md  linear.md  prompt-authoring.md  python.md  quality-gates.md  sandbox.md  screenshots.md  testing.md  tldr-maintenance.md  token-economics.md  worktrees.md
docs/examples/: e1-get-request.json  e1-get-response.json  e1-request.json  e1-response.json  e2-post-request.json  e2-post-response.json  e2-request.json  e2-response.json  movies-search-request.json  movies-search-response.json  movies-simple-response.json
docs/process/: bug-caddy-state-pollution.md  conformance-design-notes.md  conformance-h11-server-poc-plan.md  conformance-infrastructure-improvements.md  conformance-poc-plan.md  conformance-poc-review-1.md  conformance-poc-review-2.md  findings-caddy-pool-state-behavior-code-analysis.md  findings-caddy-pool-state-behavior.md  investigate-caddy-pool-state-behavior.md  plan-100-continue-8.2-8.4.md  plan-100-continue.md  plan-elasticflix-more-like-this.md  plan-full-test-suite.md  plan-h2-tests.md  plan-proxy-quirks.md  plan-rename-wireserver.md  plan-streaming-tests.md  plan-ui-mvp.md  plan-ui-svelte.md  protospy-body-inspector_1.html  protospy-sse-llm-stream-A.html  protospy-sse-llm-stream-E.html  protospy-sse-open-stream.html  protospy-themes-v2_1.html  ui-mvp-requirements.md
docs/ui/: architecture-invariants.md  body-view-modes.md  design-system.md  exploratory-charters.md  frontend-conventions.md  functional-spec.md  index.html  mapping.md  rationale.md
flix/: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  justfile  loader.py  pyproject.toml
flix/src/elasticflix/: main.py
flix/src/elasticflix/templates/: base.html  index.html  item.html  search.html  top_movies.html
flix/tests/: conftest.py  test_api.py  test_e2e.py
otel/: otelcol-config.yaml
scripts/: install-playwright-mcp-browsers  linear-archive-done.py  smoke-test.sh  token-usage.py  worktree-claude-setup.sh
scripts/agents/: _screenshot-js.sh  capture-before-base  capture-matrix  capture-pass  capture-shot  ci-watch  codex-ticket  compare-screenshots  review-paths  scene-list  screenshot-diff  set-theme  sync-codex-agents  sync-handle-ticket-inner-skill  sync-handle-ticket-skill  test_ticket.py  (+15 more)
src/: config.rs  logging.rs  main.rs  proxy.rs  server.rs  tokio_util.rs
ui/: .dockerignore  .env.test  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  components.json  coverage-thresholds.json  eslint.config.js  index.html  justfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  regconfig.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
ui-svelte/: CLAUDE.md  README.md  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
(+411 files in other folders)
