[package]
name = "protospy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http = "1.4.0"
pin-project-lite = "0.2.17"
eyre = "0.6.12"
color-eyre = "0.6.5"
tracing = "0.1.44"
color-spantrace = "0.3.0"
tracing-error = { version = "0.2.1", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
strum = { version = "0.28", features = ["derive"] }
console-subscriber = "0.5.0"
axum = { version = "0.8.8", features = ["macros"] }
serde = "1.0.228"
serde_json = "1.0.149"
bytes = "1.11.1"
base64-bytes = "0.1.0"
futures-util = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
uid = "0.1.8"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
mockall = "0.14.0"
ts-rs = { version = "12.0.1", features = [
    "bytes-impl",
    "chrono-impl",
    "no-serde-warnings",
] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
figment = { version = "0.10.19", features = ["env", "test"] }

[profile.dev]
panic = "abort"

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.5"
rstest = "0.26.1"
ts-rs = "12.0.1"
ntest = "0.9.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
