[project]
name = "proxy-conformance"
version = "0.1.0"
description = "HTTP reverse proxy conformance test suite"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3,<4",
    "h11>=0,<1",
    "httpx>=0,<1",
    "multidict>=6,<7",
    "pytest>=9,<10",
    "pytest-xdist>=3,<4",
    "typer>=0,<1",
]

[dependency-groups]
dev = [
    "pyright>=1,<2",
    "ruff>=0,<1",
]

[project.scripts]
good-server = "proxy_conformance.good_server:_cli"
wire-server = "proxy_conformance.wire_server:_cli"

[build-system]
requires = ["uv_build>=0.6.6,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -n auto --dist loadfile"

[tool.pyright]
pythonVersion = "3.14"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
