[project]
name = "elasticflix"
version = "0.1.0"
description = "Show movies from Elasticsearch"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0,<1",
    "uvicorn[standard]>=0,<1",
    "elasticsearch[async]>=9,<10",
    "pydantic-settings>=2,<3",
    "jinja2>=3,<4",
    "python-multipart>=0,<1",
    "opentelemetry-sdk>=1,<2",
    "opentelemetry-api>=1,<2",
    "opentelemetry-instrumentation-fastapi>=0,<1",
    "opentelemetry-instrumentation-elasticsearch>=0,<1",
    "opentelemetry-exporter-otlp-proto-http>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "pytest-playwright>=0,<1",
    "httpx>=0,<1",
    "ruff>=0,<1",
    "pyright>=1,<2",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1,<2",
    "ruff>=0,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (require running Elasticsearch and loaded index)",
]
