[project]
name = "elasticflix"
version = "0.2.0"
description = "Show movies from Elasticsearch"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0,<1",
    "uvicorn[standard]>=0,<1",
    "elasticsearch[async]>=9,<10",
    "pydantic-settings>=2,<3",
    "jinja2>=3,<4",
    "python-multipart>=0,<1",
    "starlette>=1.0.1,<2",
    "opentelemetry-sdk>=1,<2",
    "opentelemetry-api>=1,<2",
    "opentelemetry-instrumentation-fastapi>=0,<1",
    "opentelemetry-exporter-otlp-proto-http>=1,<2",
    "opentelemetry-instrumentation-aiohttp-client>=0.61b0",
]

[dependency-groups]
dev = [
    "httpx>=0,<1",
    "pyright>=1,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=7,<8",
    "pytest-playwright>=0,<1",
    "ruff>=0,<1",
]

[build-system]
requires = ["uv_build>=0.6.6,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.coverage.run]
source = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "e2e: end-to-end tests (require running Elasticsearch and loaded index)",
]

[tool.vulture]
ignore_decorators = [
  # FastAPI
  "@app.*",
]

# NOTE: pyright config lives in pyrightconfig.json, not here.
# pyrightconfig.json takes precedence over [tool.pyright] when present,
# and is required so that the pyright LSP operates relative to this
# subdirectory rather than the repo root.
